update mini-project rating, review, and logger to mongo
