# app/router/router.go
@@ -2,14 +2,17 @@ package router
 
 import (
 	"github.com/labstack/echo/v4"
-	http4 "github.com/nrmadi02/mini-project/Favorite/delivery/http"
-	repository6 "github.com/nrmadi02/mini-project/Favorite/repository"
-	usecase5 "github.com/nrmadi02/mini-project/Favorite/usecase"
 	http3 "github.com/nrmadi02/mini-project/enterprise/delivery/http"
 	repository4 "github.com/nrmadi02/mini-project/enterprise/repository"
 	usecase3 "github.com/nrmadi02/mini-project/enterprise/usecase"
+	http4 "github.com/nrmadi02/mini-project/favorite/delivery/http"
+	repository6 "github.com/nrmadi02/mini-project/favorite/repository"
+	usecase5 "github.com/nrmadi02/mini-project/favorite/usecase"
 	repository5 "github.com/nrmadi02/mini-project/rating/repository"
 	usecase4 "github.com/nrmadi02/mini-project/rating/usecase"
+	http5 "github.com/nrmadi02/mini-project/review/delivery/http"
+	repository7 "github.com/nrmadi02/mini-project/review/repository"
+	usecase6 "github.com/nrmadi02/mini-project/review/usecase"
 	repository2 "github.com/nrmadi02/mini-project/role/repository"
 	http2 "github.com/nrmadi02/mini-project/tag/delivery/http"
 	repository3 "github.com/nrmadi02/mini-project/tag/repository"
@@ -30,6 +33,7 @@ func SetupRouter(c *echo.Echo, db *gorm.DB) {
 	enterpriseRepository := repository4.NewEnterpriseRepository(db)
 	ratingRepository := repository5.NewRatingRepository(db)
 	favoriteRepository := repository6.NewFavoriteRepository(db)
+	reviewRepository := repository7.NewReviewRepository(db)
 
 	authUsecase := usecase.NewAuthUsecase(userRepository, roleRepository, favoriteRepository, enterpriseRepository)
 	userUsecase := usecase.NewUserUsecase(userRepository, authUsecase)
@@ -37,6 +41,7 @@ func SetupRouter(c *echo.Echo, db *gorm.DB) {
 	enterpriseUsecase := usecase3.NewEnterpriseUsecase(enterpriseRepository, tagRepository, userRepository)
 	ratingUsecase := usecase4.NewRatingUsecase(userRepository, enterpriseRepository, ratingRepository)
 	favoriteUsecase := usecase5.NewFavoriteUsecase(enterpriseRepository, favoriteRepository)
+	reviewUsecase := usecase6.NewReviewUsecase(enterpriseRepository, userRepository, reviewRepository)
 
 	authController := http.NewAuthController(authUsecase)
 	userController := http.NewUserController(authUsecase, ratingUsecase)
@@ -44,6 +49,7 @@ func SetupRouter(c *echo.Echo, db *gorm.DB) {
 	tagController := http2.NewTagController(authUsecase, tagUsecase)
 	enterpriseController := http3.NewEnterpriseController(authUsecase, enterpriseUsecase, ratingUsecase)
 	favoriteController := http4.NewFavoriteController(favoriteUsecase, authUsecase, ratingUsecase)
+	reviewController := http5.NewReviewController(reviewUsecase, enterpriseUsecase, authUsecase)
 
 	// Auth Endpoints (User)
 	c.POST("/api/v1/register", authController.Register)
@@ -72,8 +78,15 @@ func SetupRouter(c *echo.Echo, db *gorm.DB) {
 	c.DELETE("/api/v1/enterprise/:id/rating/user/:userid", enterpriseController.DeleteRatingUser, authMiddleware)
 	c.PUT("/api/v1/enterprise/:id/rating/user/:userid", enterpriseController.UpdateRating, authMiddleware)
 
-	//favorite endpoint
+	//favorite endpoints
 	c.POST("/api/v1/favorite", favoriteController.AddFavoriteEnterprise, authMiddleware)
 	c.DELETE("/api/v1/favorite", favoriteController.RemoveFavoriteEnterprise, authMiddleware)
 	c.GET("/api/v1/favorite", favoriteController.GetDetailFavoriteEnterprise, authMiddleware)
+
+	//review endpoints
+	c.POST("/api/v1/review/enterprise/:id", reviewController.AddReviewEnterprise, authMiddleware)
+	c.GET("/api/v1/review/enterprise/:id", reviewController.GetListReviewByEnterpriseID, authMiddleware)
+	c.PUT("/api/v1/review/enterprise/:id", reviewController.UpdateReviewEnterprise, authMiddleware)
+	c.DELETE("/api/v1/review/enterprise/:id", reviewController.DeleteReviewEnterprise, authMiddleware)
+	c.GET("/api/v1/review/:id", reviewController.GetDetailReviewByID, authMiddleware)
 }
