# docs/swagger.json
@@ -90,7 +90,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
+                        "description": "enterprise id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -131,7 +131,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
+                        "description": "enterprise id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -193,7 +193,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
+                        "description": "enterprise id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -242,7 +242,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
+                        "description": "enterprise id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -299,7 +299,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
+                        "description": "enterprise id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -361,7 +361,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
+                        "description": "enterprise id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -421,7 +421,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
+                        "description": "enterprise id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -488,7 +488,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
+                        "description": "enterprise id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -538,7 +538,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
+                        "description": "enterprise id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -607,6 +607,26 @@
                     "Enterprise"
                 ],
                 "summary": "Get list enterprises",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "search by name",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "length",
+                        "name": "length",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -705,9 +725,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Favorite"
+                    "favorite"
                 ],
-                "summary": "Get Favorite",
+                "summary": "Get favorite",
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -755,9 +775,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Favorite"
+                    "favorite"
                 ],
-                "summary": "Add Favorite",
+                "summary": "Add favorite",
                 "parameters": [
                     {
                         "description": "enterprise id",
@@ -819,9 +839,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Favorite"
+                    "favorite"
                 ],
-                "summary": "Remove Favorite",
+                "summary": "Remove favorite",
                 "parameters": [
                     {
                         "description": "enterprise id",
@@ -980,6 +1000,332 @@
                 }
             }
         },
+        "/review/enterprise/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "get list review enterprise",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Review"
+                ],
+                "summary": "Get List Review",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "enterprise id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.JSONSuccessResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONBadRequestResult"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONBadRequestResult"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "update review enterprise",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Review"
+                ],
+                "summary": "Update Review",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "enterprise id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "userid",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "value review",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.ReviewValue"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.JSONSuccessResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONBadRequestResult"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONBadRequestResult"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "add review enterprise",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Review"
+                ],
+                "summary": "Add Review",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "enterprise id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "userid",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "value review",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.ReviewValue"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.JSONSuccessResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONBadRequestResult"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONBadRequestResult"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "delete review enterprise",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Review"
+                ],
+                "summary": "Delete Review",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "enterprise id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "userid",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONSuccessDeleteResult"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONBadRequestResult"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONBadRequestResult"
+                        }
+                    }
+                }
+            }
+        },
+        "/review/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "get detail review enterprise",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Review"
+                ],
+                "summary": "Get Detail Review",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.JSONSuccessResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONBadRequestResult"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONBadRequestResult"
+                        }
+                    }
+                }
+            }
+        },
         "/tag": {
             "post": {
                 "security": [
@@ -1064,7 +1410,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id tag",
+                        "description": "tag id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -1251,6 +1597,14 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.ReviewValue": {
+            "type": "object",
+            "properties": {
+                "review": {
                     "type": "string"
                 }
             }
@@ -1443,6 +1797,11 @@
                 "email": {
                     "type": "string"
                 },
+                "enterprises": {
+                    "type": "array",
+                    "items": {}
+                },
+                "favorite": {},
                 "fullname": {
                     "type": "string"
                 },
